# Zivc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
document/: CMakeLists.txt  acknowledgement.md
example/: CMakeLists.txt  buffer_example.cpp  cli.cpp  cli.hpp  context_example.cpp  device_example.cpp  gui_example.cpp  kernel_example.cpp  platform_example.cpp  vulkan_backend_example.cpp  vulkan_sub_platform_example.cpp
example/gui/: gui.cpp  gui.hpp  gui_application.cpp  gui_application.hpp  gui_application_options.cpp  gui_application_options.hpp  gui_object.cpp  gui_object.hpp  gui_platform.cpp  gui_platform.hpp  gui_widget.cpp  gui_widget.hpp
example/gui/utility/: error.cpp  error.hpp  glfw.cpp  glfw.hpp
example/kernels/: example.cl
source/zivc/: CMakeLists.txt  document.dox
source/zivc/cmake/: compiler.cmake  document.cmake  general.cmake  kernel.cmake  packaging.cmake  platform.cmake
source/zivc/core/zivc/: backend.cpp  backend.hpp  buffer-inl.hpp  buffer.hpp  buffer_common-inl.hpp  buffer_common.cpp  buffer_common.hpp  context-inl.hpp  context.cpp  context.hpp  context_options-inl.hpp  context_options.hpp  device-inl.hpp  device.cpp  device.hpp  device_info-inl.hpp  device_info.cpp  device_info.hpp  kernel-inl.hpp  kernel.hpp  kernel_common.cpp  kernel_common.hpp  kernel_set-inl.hpp  kernel_set.hpp  platform-inl.hpp  platform.cpp  platform.hpp  platform_options-inl.hpp  platform_options.hpp  sub_platform.cpp  sub_platform.hpp  zivc-inl.hpp  zivc.hpp  zivc_cl.hpp  zivc_config-inl.hpp.in  zivc_config.hpp
source/zivc/kernel/zivc/: fill_data.cl  fill_kernel.cl
source/zivc/kernel_baker/: CMakeLists.txt  kernel_baker.cpp
source/zivc/template/: kernel_set.cl.in  kernel_set.cmake.in  kernel_set.cpp.in  kernel_set.hpp.in  kernel_set_lsp.cmake.in
source/zivc/tool/descriptor_map_baker/: CMakeLists.txt  descriptor_map_baker.cpp
source/zivc/tool/kernel_baker/: CMakeLists.txt  kernel_baker.cpp
source/zivc/zivc/: buffer-inl.hpp  buffer.hpp  buffer_common-inl.hpp  buffer_common.cpp  buffer_common.hpp  device-inl.hpp  device.cpp  device.hpp  device_info-inl.hpp  device_info.cpp  device_info.hpp  kernel-inl.hpp  kernel.hpp  kernel_common.hpp  kernel_set-inl.hpp  kernel_set.hpp  platform-inl.hpp  platform.cpp  platform.hpp  platform_options-inl.hpp  platform_options.hpp  sub_platform.cpp  sub_platform.hpp  zivc-inl.hpp  zivc.hpp  zivc_config-inl.hpp.in  zivc_config.hpp
source/zivc/zivc/cl/: algorithm-inl.cl  algorithm.cl  array-inl.cl  array.cl  atomic-inl.cl  atomic.cl  correlated_multi_jittered_engine-inl.cl  correlated_multi_jittered_engine.cl  floating_point-inl.cl  floating_point.cl  fnv_1a_hash_engine-inl.cl  fnv_1a_hash_engine.cl  geometric-inl.cl  geometric.cl  hash_engine-inl.cl  hash_engine.cl  limits-inl.cl  limits.cl  math-inl.cl  math.cl  math_const-inl.cl  math_const.cl  matrix.cl  relational-inl.cl  relational.cl  synchronization-inl.cl  synchronization.cl  type_traits-inl.cl  type_traits.cl  types-inl.cl  types.cl  utility-inl.cl  utility.cl  vector_data-inl.cl  vector_data.cl  zivc_config-inl.cl  zivc_config.cl
source/zivc/zivc/cppcl/: address_space_pointer-inl.hpp  address_space_pointer.hpp  address_space_value-inl.hpp  address_space_value.hpp  algorithm-inl.hpp  algorithm.hpp  atomic-inl.hpp  atomic.hpp  geometric-inl.hpp  geometric.hpp  math-inl.hpp  math.hpp  relational-inl.hpp  relational.hpp  synchronization.hpp  types-inl.hpp  types.hpp  utility-inl.hpp  utility.cpp  utility.hpp  vector-inl.hpp  vector.hpp
source/zivc/zivc/cpu/: cpu_buffer-inl.hpp  cpu_buffer.hpp  cpu_device-inl.hpp  cpu_device.cpp  cpu_device.hpp  cpu_device_info.cpp  cpu_device_info.hpp  cpu_features.hpp  cpu_kernel-inl.hpp  cpu_kernel.hpp  cpu_sub_platform-inl.hpp  cpu_sub_platform.cpp  cpu_sub_platform.hpp
source/zivc/zivc/utility/: buffer_launch_options-inl.hpp  buffer_launch_options.hpp  error.cpp  error.hpp  fence-inl.hpp  fence.cpp  fence.hpp  id_data-inl.hpp  id_data.hpp  kernel_arg_cache-inl.hpp  kernel_arg_cache.hpp  kernel_arg_info-inl.hpp  kernel_arg_parser-inl.hpp  kernel_arg_parser.hpp  kernel_arg_type_info.hpp  kernel_init_params-inl.hpp  kernel_launch_options-inl.hpp  kernel_launch_options.hpp  kernel_parameters-inl.hpp  kernel_parameters.hpp  kernel_params-inl.hpp  kernel_params.hpp  launch_result-inl.hpp  launch_result.hpp  mapped_memory-inl.hpp  mapped_memory.hpp  memory_heap_info-inl.hpp  memory_heap_info.hpp  reinterp_buffer-inl.hpp  reinterp_buffer.hpp  type_pack-inl.hpp  zivc_object-inl.hpp  zivc_object.cpp  zivc_object.hpp  zstd.hpp
source/zivc/zivc/vulkan/: vulkan_buffer-inl.hpp  vulkan_buffer.hpp  vulkan_buffer_impl.cpp  vulkan_buffer_impl.hpp  vulkan_device-inl.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_device_info-inl.hpp  vulkan_device_info.cpp  vulkan_device_info.hpp  vulkan_kernel-inl.hpp  vulkan_kernel.hpp  vulkan_kernel_impl-inl.hpp  vulkan_kernel_impl.cpp  vulkan_kernel_impl.hpp  vulkan_sub_platform-inl.hpp  vulkan_sub_platform.cpp  vulkan_sub_platform.hpp
test/: CMakeLists.txt
test/unittest/: buffer_test.cpp  buffer_test1.cpp  buffer_test2.cpp  cl_cpp_test1.cpp  cl_cpp_test_atomic.cpp  cl_cpp_test_geometry.cpp  cl_cpp_test_math.cpp  cl_cpp_test_math_float.cpp  cl_cpp_test_math_power.cpp  cl_cpp_test_math_trigonometric.cpp  cl_cpp_test_relation.cpp  cl_cpp_test_type.cpp  cli.cpp  cli.hpp  config.cpp  config.hpp  context_options_test.cpp  context_test.cpp  googletest.hpp  kernel_test.cpp  kernel_test1.cpp  kernel_test2.cpp  kernel_test3.cpp  kernel_test_local.cpp  kernel_test_local_nv.cpp  kernel_test_params.cpp  kernel_test_pod.cpp  main.cpp  opencl_cpp_test_vector.cpp  platform_options_test.cpp  platform_test.cpp  test.cpp  test.hpp  unittest.cpp
test/unittest/kernels/cl_cpp_test1/: cl_cpp_test1.cl
test/unittest/kernels/cl_cpp_test_atomic/: cl_cpp_test_atomic.cl
test/unittest/kernels/cl_cpp_test_atomic_compare_and_exchange/: cl_cpp_test_atomic_compare_and_exchange.cl
test/unittest/utility/: cli.cpp  cli.hpp  config.cpp  config.hpp  googletest.hpp  math_test.hpp  test-inl.hpp  test.cpp  test.hpp
(+358 files in other folders)
